--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
   <img class="item" src="2.jpeg" alt="">
   <img class="item" src="3.jpeg" alt="">
   <img class="item" src="4.jpeg" alt="">
-  <img class="item" src="5.jpg" alt="">
-  <img class="item" src="6.jpg" alt="">
+  <img class="item" src="5.jpeg" alt="">
+  <img class="item" src="6.jpeg" alt="">
   <img class="item" src="7.jpg" alt="">
   <img class="item" src="8.jpg" alt="">
   <img class="item" src="9.jpg" alt="">
